# LudumDare50

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
content/: map_frame.aseprite  mown_grass.aseprite  player.aseprite  res.rc  scrolling_rectangle.aseprite  splash.aseprite  splash2.aseprite  tiles.aseprite  transition_banner_left.aseprite  transition_banner_right.aseprite  volumebar.aseprite  volumebar_part.aseprite
engine/: CMakeLists.txt
engine/include/: AnimatedSprite.hpp  Animation.hpp  AudioManager.hpp  AudioManager.inl  ContentManager.hpp  ContentManager.inl  CustomMath.hpp  CustomMath.inl  Game.hpp  Game.inl  GameState.hpp  MessageDispatcher.hpp  MessageDispatcher.inl  MessageSubscriber.hpp  MessageSubscriber.inl  ServiceLocator.hpp  ServiceLocator.inl  Tileset.hpp
engine/src/: Animation.cpp  Game.cpp  Tileset.cpp
ext/imgui/: CMakeLists.txt
game/: CMakeLists.txt
game/include/: AudioFiles.hpp  Content.hpp  CreditsState.hpp  LDGame.hpp  Line.hpp  Map1.hpp  Map2.hpp  MapSelectionState.hpp  MapView.hpp  Maps.hpp  Message.hpp  PlayState.hpp  Player.hpp  ResourceBar.hpp  SaveFileManager.hpp  Score.hpp  StringFormat.hpp  TileMap.hpp  Tiles.hpp  TitleState.hpp  TransitionState.hpp  VictoryState.hpp  VolumeBar.hpp
game/src/: Main.cpp  MapView.cpp  Maps.cpp  SaveFileManager.cpp  StringFormat.cpp  TileMap.cpp  VolumeBar.cpp
